# frisquet-bridge

./: .gitignore  README.md  config.toml.example  pyproject.toml
deploy/: frisquet-bridge.service
docs/: CONFIG.md  FRISQUET.md  PROTOCOL.md
firmware/: platformio.ini
firmware/src/: main.cpp  protocol.cpp  protocol.h
logs/re/: README.md
scripts/: analyze_pushes.py  try_virtual_satellite.py  try_zone_auto.py  vsat_console.py
src/frisquet_bridge/: __init__.py  boiler_profile.py  climate.py  config.py  emulation.py  frame.py  logging.py  model.py  protocol.py  satellite.py  scheduler.py  service.py  state_store.py
src/frisquet_bridge/cli/: __init__.py  listen.py  main.py  options.py  outside_temp.py  pair.py  read.py  recover_id.py  serve.py
src/frisquet_bridge/connect/: __init__.py  client.py  codec.py  decode.py  ops.py  passive.py  state.py
src/frisquet_bridge/mqtt/: __init__.py  adapter.py
src/frisquet_bridge/transport/: __init__.py  base.py  serial.py
tests/: conftest.py  helpers.py  test_boiler_profile.py  test_client.py  test_climate.py  test_codec.py  test_config.py  test_decode.py  test_emulation.py  test_frame.py  test_logging.py  test_model.py  test_mqtt_adapter.py  test_ops.py  test_protocol.py  test_satellite.py  test_scheduler.py  test_serial.py  test_state.py  test_state_store.py
